# serializer version: 1
# name: TestBacktest.test_btcusdt
  '95e6b7ec5fb892dcd7574df132c190a5f7f454410dc7fdf64c6684e3666a2282'
# ---
# name: TestBacktest.test_btcusdt.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
# name: TestBacktest.test_closed_only
  '95e6b7ec5fb892dcd7574df132c190a5f7f454410dc7fdf64c6684e3666a2282'
# ---
# name: TestBacktest.test_closed_only.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
# name: TestBacktest.test_limit_order
  'cc6020614d6d8dd9dae66ba3cc29c9cfa300dafe0eb064a0044c233bca088b3c'
# ---
# name: TestBacktest.test_limit_order.1
  'e4a2b46e751f71db8111855f37cff7af949ac22a74863bfa76bac842d6242174'
# ---
# name: TestBacktest.test_limit_order.2
  '6aed53345166e634f2ed33e99c9a285f791d09f32200dcf8430a9f041edac9c9'
# ---
# name: TestBacktest.test_limit_order.3
  '57628918aa341821f4b203e1ebc25997c1ce2e21d3cdc79a320abe326a3947e9'
# ---
# name: TestBacktest.test_msft
  '93aa7200f3a6916557010d92726dedb79c4fca6382f750aebd0e74c9112834cb'
# ---
# name: TestBacktest.test_msft.1
  '2ed5875faf780ea4e99640c99ad166820c82a756dabcaffe786cd153c5ea6670'
# ---
# name: TestBacktest.test_optimize
  'a08819f5f4e56363107daa88d6b1801dc55259df16fec9432972510d63cc2361'
# ---
# name: TestBacktest.test_optimize.1
  '95e6b7ec5fb892dcd7574df132c190a5f7f454410dc7fdf64c6684e3666a2282'
# ---
# name: TestBacktest.test_optimize.2
  'a14364a016669f0108d40fcd568146eee1372a43ea4a75ca2554e1d2f7c886a2'
# ---
